--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@alephmatic/full-stack-ai",
-  "version": "0.0.4",
+  "name": "fsai",
+  "version": "0.0.5",
   "description": "Build a full stack Next.js app with an AI prompt.",
   "homepage": "https://github.com/alephmatic/full-stack-ai#readme",
   "license": "MIT",
