--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fsai",
   "version": "0.0.5",
-  "description": "Build a full stack Next.js app with an AI prompt.",
+  "description": "Build a full stack Next.js app from an AI prompt.",
   "homepage": "https://github.com/alephmatic/full-stack-ai#readme",
   "license": "MIT",
   "author": {
