--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "dotenv": "^16.3.1",
     "execa": "^8.0.1",
     "openai": "^4.20.1",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zod-to-json-schema": "^3.22.1"
   },
   "devDependencies": {
     "@types/node": "^20.10.3",
